--- a/OhMyFood-a-la-francaise.html
+++ b/OhMyFood-a-la-francaise.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" href="./sass/style-a-la-francaise.css">
 
-    <title>OhMyFood-a-la-française</title>
+    <title>OhMyFood-à-la-française</title>
 
     <link rel="preload" href="Shrikhand-Regular.woff2" as="font" type="font/woff2" crossorigin> 
     <link rel="preload" href="Roboto-Regular.woff2" as="font" type="font/woff2" crossorigin>
