--- a/OhMyFood-la-palette-du-gout.html
+++ b/OhMyFood-la-palette-du-gout.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" href="./sass/style-la-note-enchantee.css">
+    <link rel="stylesheet" type="text/css" href="./sass/style-la-palette-du-gout.css">
 
-    <title>OhMyFood-la-note-enchantée</title>
+    <title>OhMyFood-la-palette-du-goût</title>
 
     <link rel="preload" href="Shrikhand-Regular.woff2" as="font" type="font/woff2" crossorigin> 
     <link rel="preload" href="Roboto-Regular.woff2" as="font" type="font/woff2" crossorigin>
@@ -23,9 +23,9 @@
     </header>
 
     <section class="menu">
-        <img class="restaurant-image" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
+        <img class="restaurant-image" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
         <div class="menu-title">
-            <h1>La note enchantée</h1>
+            <h1>La palette du goût</h1>
             <div class="icon">
                 <svg class="heart-main" stroke="violet" stroke-width="20" width="24" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="heart" class="svg-inline--fa fa-heart fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="transparent" d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"></path>
                 </svg>                
@@ -40,8 +40,8 @@
                 <input type="checkbox" class="hidden" id="cbx">
                 <label class="menu-list" for="cbx">
                     <span class="column-1">
-                        <h3>Ravioles de foie gras</h3>
-                        <h4>Accompagnés de leur crème à la truffe</h4>
+                        <h3>Fricassée d'escargot</h3>
+                        <h4>Au piment d'Espelette</h4>
                     </span>
                 <span class="column-2">25€</span>
                 </label>
@@ -52,8 +52,8 @@
             <input type="checkbox" class="hidden" id="cbx2">
                 <label class="menu-list" for="cbx2">
                     <span class="column-1">
-                        <h3>Caviar osciètre</h3>
-                        <h4>Sur blini à la farine de blé noir</h4>
+                        <h3>Foie gras de canard mi-cuit</h3>
+                        <h4>Et ses copeaux de truffe noire</h4>
                     </span>
                     <span class="column-2">35€</span>
                 </label>
@@ -64,36 +64,36 @@
                 <input type="checkbox" class="hidden" id="cbx3">
                 <label class="menu-list" for="cbx3">
                     <span class="column-1">
-                        <h3>Homard et espuma de potiron</h3>
-                        <h4>Mariné aux zestes d'orange</h4>
+                        <h3>Oeuf au plat</h3>
+                        <h4>Assaisonné à la truffe sur lit de caviar</h4>
                     </span>
                     <span class="column-2">20€</span>
-                </label>
-            </div>
-        </div>
-        <div class="row-plat">
-            <div id="row-4">
-                <input type="checkbox" class="hidden" id="cbx4">
-                <label class="menu-list" for="cbx4">
-                    <span class="column-1">
-                        <h3>Foie gras de canard cuit entier</h3>
-                        <h4>Confiture de figue et pain toasté</h4>
-                    </span>
-                    <span class="column-2">35€</span>
                 </label>
             </div>
         </div>
 
         <h2>PLATS</h2>
         <div class="row-plat">
+            <div id="row-4">
+                <input type="checkbox" class="hidden" id="cbx4">
+                <label class="menu-list" for="cbx4">
+                    <span class="column-1">
+                        <h3>Filet de boeuf aux herbes</h3>
+                        <h4>Accompagné de sa ribambelle de légumes</h4>
+                    </span>
+                    <span class="column-2">40€</span>
+                </label>
+            </div>
+        </div>
+        <div class="row-plat">
             <div id="row-5">
                 <input type="checkbox" class="hidden" id="cbx5">
                 <label class="menu-list" for="cbx5">
                     <span class="column-1">
-                        <h3>Noix de coquilles Saint-Jacques</h3>
-                        <h4>Sur lit de purée de céleri-rave</h4>
+                        <h3>Parmentier de queue de boeuf</h3>
+                        <h4>À la truffe noire sur sa purée de panais</h4>
                     </span>
-                    <span class="column-2">40€</span>
+                    <span class="column-2">35€</span>
                 </label>
             </div>
         </div>
@@ -102,20 +102,8 @@
                 <input type="checkbox" class="hidden" id="cbx6">
                 <label class="menu-list" for="cbx6">
                     <span class="column-1">
-                       <h3>Langoustine poêlée</h3>
-                       <h4>Purée de patate douce</h4>
-                    </span>
-                    <span class="column-2">35€</span>
-                </label>
-            </div>
-        </div>
-        <div class="row-plat">
-            <div id="row-7">
-                <input type="checkbox" class="hidden" id="cbx7">
-                <label class="menu-list" for="cbx7">
-                    <span class="column-1">
-                       <h3>Mijoté de queue de boeuf </h3>
-                       <h4>Et riz sauvage aux zestes de citron</h4>
+                       <h3>Filet de turbot</h3>
+                       <h4>Aux agrumes</h4>
                     </span>
                     <span class="column-2">44€</span>
                 </label>
@@ -124,14 +112,26 @@
     
         <h2>DESSERTS</h2>
         <div class="row-plat">
+            <div id="row-7">
+                <input type="checkbox" class="hidden" id="cbx7">
+                <label class="menu-list" for="cbx7">
+                    <span class="column-1">
+                        <h3>Paris-Brest</h3>
+                        <h4>Revisité</h4>
+                    </span>
+                    <span class="column-2">18€</span>
+                </label>
+            </div>
+        </div>
+        <div class="row-plat">
             <div id="row-8">
                 <input type="checkbox" class="hidden" id="cbx8">
                 <label class="menu-list" for="cbx8">
                     <span class="column-1">
-                        <h3>Macaron noisette et chocolat</h3>
-                        <h4>Glace au caramel brun et sel de Guérande</h4>
+                        <h3>Macaron au chocolat d'exception</h3>
+                        <h4>Et glace à la vanille de Madagascar</h4>
                     </span>
-                    <span class="column-2">18€</span>
+                    <span class="column-2">22€</span>
                 </label>
             </div>
         </div>
@@ -140,20 +140,8 @@
                 <input type="checkbox" class="hidden" id="cbx9">
                 <label class="menu-list" for="cbx9">
                     <span class="column-1">
-                        <h3>Baba au rhum revisité</h3>
-                        <h4>Avec son coulis de citron</h4>
-                    </span>
-                    <span class="column-2">22€</span>
-                </label>
-            </div>
-        </div>
-        <div class="row-plat">
-            <div id="row-10">
-                <input type="checkbox" class="hidden" id="cbx10">
-                <label class="menu-list" for="cbx10">
-                    <span class="column-1">
-                        <h3>Tarte au citron meringuée</h3>
-                        <h4>Déstructurée</h4>
+                        <h3>Mousse au chocolat</h3>
+                        <h4>Au piment d'Espelette et à la truffe noire</h4>
                     </span>
                     <span class="column-2">23€</span>
                 </label>
