--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <h1 class="titre-restaurant">Restaurants</h1>
     <section class="restaurants">
-        <div class="restaurant-card">
+        <a href="./OhMyFood-la-palette-du-gout.html" class="restaurant-card">
             <div class="image">
                 <p>Nouveau</p>
                 <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La-palette-du-goût">
@@ -71,8 +71,8 @@
                 </div>    
                 <p>Ménilmontant</p>
             </div>
-        </div>
-        <div class="restaurant-card">
+        </a>
+        <a href="./OhMyFood-la-note-enchantée.html" class="restaurant-card">
             <div class="image">
                 <p>Nouveau</p>
                 <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
@@ -87,7 +87,7 @@
                 </div> 
                 <p>Charonne</p>
             </div>
-        </div>
+        </a>
         <a href="./OhMyFood-a-la-francaise.html" class="restaurant-card">
             <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
             <div class="container">
@@ -101,7 +101,7 @@
                 </div> 
             </div>
         </a>
-        <div class="restaurant-card">
+        <a href="./OhMyFood-le-delice-des-sens.html" class="restaurant-card">
             <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
             <div class="container">
                 <h2><b>Le délice des sens</b></h2>
@@ -113,7 +113,7 @@
                 </div> 
                 <p>Folie-Méricourt</p>
             </div>
-        </div>
+        </a>
     </section>
 
     <footer>
