--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <a href="#">Mentions légales</a>
         </div>
         <div class="footer-line">
-            <a href="mailto:ohmyfood@example.com">Contact</a>
+            <a href="mailto:alexandre_zelen@outlook.fr">Contact</a>
         </div>
     </footer>
     </div>
