--- a/francaise.html
+++ b/francaise.html
@@ -8,20 +8,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" href="./sass/style-la-palette-du-gout.css">
+    <link rel="stylesheet" type="text/css" href="./sass/style-menu.css">
 
     <title>À la française</title>
-
-    <link rel="preload" href="Shrikhand-Regular.woff2" as="font" type="font/woff2" crossorigin> 
-    <link rel="preload" href="Roboto-Regular.woff2" as="font" type="font/woff2" crossorigin>
 
 </head>
 
 <body>
 
     <header>
-        <a href="./index.html"><img class="left-arrow" src="images/logo/arrow-left-solid.svg" alt="left-arrow-icon"></a>
-        <img class="title" src="images/logo/ohmyfood.svg" alt="logo-OhMyFood">
+        <a href="./index.html"><img class="left-arrow" src="images/logo/arrow-left-solid.svg" alt="logo retour en arrière"></a>
+        <img class="title" src="images/logo/ohmyfood.svg" alt="logo OhMyFood">
     </header>
 
     
@@ -154,27 +151,27 @@
             </div>
         </section>
     
-        <section class="section-commander">
-        <button class="button-commander">Commander</button>
-        </section>
+        <div class="section-commander">
+            <button class="button-commander">Commander</button>
+        </div>
 
     <footer>
         <div class="footer-line">
-            <img class="logo-footer" src="images/logo/ohmyfood.svg" alt="logo-OhMyFood">
+            <img class="logo-footer" src="images/logo/ohmyfood.svg" alt="logo OhMyFood">
         </div>
         <div class="footer-line">
-            <img src="images/logo/ustensils.svg" alt="logo-ustensils">
+            <img src="images/logo/ustensils.svg" alt="logo proposer un restaurant">
             <a href="#">Proposer un restaurant</a>
         </div>
         <div class="footer-line">
-            <img src="images/logo/hands-helping.svg" alt="logo-hands-helping">
+            <img src="images/logo/hands-helping.svg" alt="logo partenaire">
             <a href="#">Devenir partenaire</a>
         </div>
         <div class="footer-line">
             <a href="#">Mentions légales</a>
         </div>
         <div class="footer-line">
-            <a href="mailto:ohmyfood@example.com">Contact</a>
+            <a href="mailto:alexandre_zelen@outlook.fr">Contact</a>
         </div>
     </footer>
     </section>
