--- a/délice.html
+++ b/délice.html
@@ -30,8 +30,8 @@
         <div class="menu-title">
             <h1>Le délice des sens</h1>
             <div class="heart">
-                <i class="far fa-heart bg"></i>
-                <i class="fas fa-heart no-bg"></i>
+                <i class="far fa-heart empty"></i>
+                <i class="fas fa-heart black"></i>
             </div>
         </div>
 
@@ -75,6 +75,7 @@
         </section>
 
         <h2>plats</h2>
+        
         <section class="row-plate">
             <div class="row-plate__column">
                 <h3 class="row-plate__firstline">Poulet rôti aux herbes de provence</h3>
@@ -174,7 +175,9 @@
             <a href="mailto:alexandre_zelen@outlook.fr">Contact</a>
         </div>
     </footer>
+
     </section>
+
 </body>
 
 </html>
