--- a/enchantée.html
+++ b/enchantée.html
@@ -30,8 +30,8 @@
         <div class="menu-title">
             <h1>La note enchantée</h1>
             <div class="heart">
-                <i class="far fa-heart bg"></i>
-                <i class="fas fa-heart no-bg"></i>
+                <i class="far fa-heart empty"></i>
+                <i class="fas fa-heart black"></i>
             </div>
         </div>
 
@@ -186,7 +186,9 @@
             <a href="mailto:alexandre_zelen@outlook.fr">Contact</a>
         </div>
     </footer>
+    
     </section>
+
 </body>
 
 </html>
