--- a/francaise.html
+++ b/francaise.html
@@ -30,8 +30,8 @@
         <div class="menu-title">
             <h1>À la française</h1>
             <div class="heart">
-                <i class="far fa-heart bg"></i>
-                <i class="fas fa-heart no-bg"></i>
+                <i class="far fa-heart empty"></i>
+                <i class="fas fa-heart black"></i>
             </div>
         </div>
 
@@ -175,6 +175,7 @@
         </div>
     </footer>
     </section>
+    
 </body>
 
 </html>
