--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             <div class="container">
                 <h2><b>La palette du goût</b></h2>
                 <div class="heart">
-                    <i class="far fa-heart bg"></i>
-                    <i class="fas fa-heart no-bg"></i>
+                    <i class="far fa-heart empty"></i>
+                    <i class="fas fa-heart black"></i>
                 </div>    
                 <p>Ménilmontant</p>
             </div>
@@ -77,8 +77,8 @@
             <div class="container">
                 <h2><b>La note enchantée</b></h2>
                 <div class="heart">
-                    <i class="far fa-heart bg"></i>
-                    <i class="fas fa-heart no-bg"></i>
+                    <i class="far fa-heart empty"></i>
+                    <i class="fas fa-heart black"></i>
                 </div>    
                 <p>Charonne</p>
             </div>
@@ -89,8 +89,8 @@
                 <h2><b>À la française</b></h2>
                 <p>Cité Rouge</p>
                 <div class="heart">
-                    <i class="far fa-heart bg"></i>
-                    <i class="fas fa-heart no-bg"></i>
+                    <i class="far fa-heart empty"></i>
+                    <i class="fas fa-heart black"></i>
                 </div> 
             </div>
         </a>
@@ -99,8 +99,8 @@
             <div class="container">
                 <h2><b>Le délice des sens</b></h2>
                 <div class="heart">
-                    <i class="far fa-heart bg"></i>
-                    <i class="fas fa-heart no-bg"></i>
+                    <i class="far fa-heart empty"></i>
+                    <i class="fas fa-heart black"></i>
                 </div>  
                 <p>Folie-Méricourt</p>
             </div>
