--- a/palette.html
+++ b/palette.html
@@ -30,8 +30,8 @@
         <div class="menu-title">
             <h1>La palette du goût</h1>
             <div class="heart">
-                <i class="far fa-heart bg"></i>
-                <i class="fas fa-heart no-bg"></i>
+                <i class="far fa-heart empty"></i>
+                <i class="fas fa-heart black"></i>
             </div>
         </div>
 
@@ -174,7 +174,9 @@
             <a href="mailto:alexandre_zelen@outlook.fr">Contact</a>
         </div>
     </footer>
+
     </section>
+    
 </body>
 
 </html>
